# dcmtagger

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  go.mod  go.sum  lib.go  main.go  main_test.go
.github/workflows/: ci.yml  go.yml
src/: app.rs  app_cmd.rs  dicom.rs  help.rs  history.rs  main.rs  tag_edit.rs  tree_widget.rs
testdata/: test.dcm  test2.dcm
