[package]
name = "dcmtagger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
crossterm = "0.29.0"
dicom-core = "0.8.2"
dicom-dictionary-std = "0.8.1"
dicom-encoding = "0.8.2"
dicom-object = "0.8.2"
dicom-transfer-syntax-registry = "0.8.2"
ratatui = "0.29.0"
